--- a/NEWS
+++ b/NEWS
@@ -19,7 +19,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
 	Installation Manual'.
 
     o	Argument matching for primitive functions is now done in the
-	same way as for interpreted functions exept for the deliberate
+	same way as for interpreted functions except for the deliberate
 	exceptions
 
 	    call switch .C .Fortran .Call .External
@@ -482,7 +482,7 @@ BUG FIXES
     o	mean(x, trim=, na.rm = FALSE) failed to return NA if 'x'
 	contained missing values.  (Reported by Bill Dunlap.)
 
-    o	extreme tail behavior of, pbeta() {and hence pf()}, e.g.,
+    o	Extreme tail behavior of, pbeta() {and hence pf()}, e.g.,
 	pbeta(x, 3, 2200, lower.tail=FALSE, log.p=TRUE) now returns
 	finite values instead of jumping to -Inf too early (PR#14230).
 
