--- a/NEWS
+++ b/NEWS
@@ -486,6 +486,11 @@ BUG FIXES
 	pbeta(x, 3, 2200, lower.tail=FALSE, log.p=TRUE) now returns
 	finite values instead of jumping to -Inf too early (PR#14230).
 
+    o	parse(text=x) misbehaved for objects 'x' that were not coerced
+	internally to character, notably symbols.  (Reported to
+	R-devel by Bill Dunlap.)
+
+
 
 
 	**************************************************
